# Server/app/Models/User.php
@@ -6,6 +6,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Illuminate\Support\Facades\Auth;
 use Laravel\Sanctum\HasApiTokens;
 
 class User extends Authenticatable
@@ -18,6 +19,72 @@ class User extends Authenticatable
      *
      * @var array<int, string>
      */
+
+    /**
+     * @OA\Schema(
+     *      schema="User",
+     *      required={"first_name", "last_name", "other_names", "birthday", "gender",
+     *     "role", "contact", "email", "hospital", "staff_id", "city"},
+     *      @OA\Property(
+     *          property="first_name",
+     *          description="The first name of the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="last_name",
+     *          description="The last name of the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="other_names",
+     *          description="Other names of the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="birthday",
+     *          description="The birthday of the user",
+     *          type="string",
+     *          format="date",
+     *      ),
+     *      @OA\Property(
+     *          property="gender",
+     *          description="The gender of the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="role",
+     *          description="The role of the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="contact",
+     *          description="The contact number of the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="email",
+     *          description="The email address of the user",
+     *          type="string",
+     *          format="email",
+     *      ),
+     *      @OA\Property(
+     *          property="hospital",
+     *          description="The hospital associated with the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="staff_id",
+     *          description="The staff ID of the user",
+     *          type="string",
+     *      ),
+     *      @OA\Property(
+     *          property="city",
+     *          description="The city of the user",
+     *          type="string",
+     *      ),
+     * )
+     */
+
     protected $fillable = [
         'first_name',
         'last_name',
@@ -43,16 +110,44 @@ class User extends Authenticatable
         'remember_token',
     ];
 
+
     /**
      * Get the attributes that should be cast.
      *
      * @return array<string, string>
      */
+
     protected function casts(): array
     {
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
         ];
+    }
+
+    protected static function booted()
+    {
+        static::creating(function ($record) {
+            $user = auth()->user();
+            if ($user && $user->role === 'Doctor') {
+                $record->user_id = $user->id;
+            }
+            $user->hospital = Auth::user()->hospital();
+
+        });
+    }
+
+    public function Sluggable()
+    {
+        return [
+            'hospital' => [
+                'source' => Auth::user()->hospital
+            ]
+        ];
+
+    }
+
+    public function hospital() {
+        return $this->belongsTo(Hosptial::class);
     }
 }
